fix resulting layout issues:

--- a/app/globals.tw.css
+++ b/app/globals.tw.css
@@ -90,8 +90,10 @@
   }
 
   .shorts {
+    justify-self: center;
+
+    grid-row: 3/5;
     grid-column: 2/3;
-    grid-row: 4/5;
   }
 
   /* TABLET */
